[gd_scene load_steps=14 format=3 uid="uid://dw6w3x3giqsjn"]

[ext_resource type="Script" path="res://scripts/enemigo2.gd" id="1_vkvx7"]
[ext_resource type="Texture2D" uid="uid://bu72vk500g7jh" path="res://Sprites/enemigoMago2/Attack_1.png" id="2_gb8mv"]
[ext_resource type="Texture2D" uid="uid://cfsfc2131u6bq" path="res://Sprites/enemigoMago2/Dead.png" id="3_ty5hc"]
[ext_resource type="Texture2D" uid="uid://dhbu4kpah88jf" path="res://Sprites/enemigoMago2/Walk.png" id="4_drh5q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yg41b"]
size = Vector2(13.8059, 31.5156)

[sub_resource type="Animation" id="Animation_m76ty"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_arb26"]
resource_name = "atack"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_gb8mv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 3, 4, 5, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_io16v"]
resource_name = "dead"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ty5hc")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_libn0"]
resource_name = "run"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_drh5q")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_upg50"]
_data = {
"RESET": SubResource("Animation_m76ty"),
"atack": SubResource("Animation_arb26"),
"dead": SubResource("Animation_io16v"),
"run": SubResource("Animation_libn0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ivlvx"]
radius = 13.75

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fdq4"]
bg_color = Color(0, 0, 0, 0.584314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkmfx"]
bg_color = Color(0.768627, 0, 0, 0.521569)

[node name="enemigo2" type="CharacterBody2D" groups=["enemigos2"]]
scale = Vector2(0.965413, 0.965413)
input_pickable = true
script = ExtResource("1_vkvx7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.41452, 1.85387)
shape = SubResource("RectangleShape2D_yg41b")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8.34238, -16.6847)
scale = Vector2(0.537461, 0.537461)
texture = ExtResource("2_gb8mv")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_upg50")
}

[node name="derecha" type="RayCast2D" parent="."]
position = Vector2(6.25003, 1.25001)
target_position = Vector2(30, 2.08165e-12)

[node name="izquierda" type="RayCast2D" parent="."]
position = Vector2(-6.24994, 1.25001)
target_position = Vector2(-30, 2.08165e-12)

[node name="abajo1" type="RayCast2D" parent="."]
position = Vector2(-6.24997, 17.5)
target_position = Vector2(2.08165e-12, 15)

[node name="abajo2" type="RayCast2D" parent="."]
position = Vector2(7.5, 17.5)
target_position = Vector2(2.08165e-12, 15)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(16.6847, -12.0501)
scale = Vector2(1.16327, 1.16327)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ivlvx")
disabled = true

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -10.1962
offset_top = -22.2463
offset_right = 10.8038
offset_bottom = 4.75366
scale = Vector2(1, 0.1)
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_styles/background = SubResource("StyleBoxFlat_0fdq4")
theme_override_styles/fill = SubResource("StyleBoxFlat_gkmfx")
value = 100.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
